fixed my css overflow and route errors (DOH)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,11 @@ body {
   height: 100%;
 }
 
+/* .app {
+  width: 100%;
+  height: 100%;
+} */
+
 .page {
   height:100%;
   width: 100%;
@@ -33,8 +38,8 @@ body {
   background-color: black;
   font-family: 'Unica One', cursive;
   font-weight: 600;
-  min-height: 100%;
   position: absolute;
+  overflow: scroll;
 }
 
 .text {
